--- a/Simple-Program-I/01-Print-statement-on-screen/q1/q1.cbp
+++ b/Simple-Program-I/01-Print-statement-on-screen/q1/q1.cbp
@@ -2,12 +2,12 @@
 <CodeBlocks_project_file>
 	<FileVersion major="1" minor="6" />
 	<Project>
-		<Option title="Hello-world" />
+		<Option title="q1" />
 		<Option pch_mode="2" />
 		<Option compiler="gcc" />
 		<Build>
 			<Target title="Debug">
-				<Option output="bin/Debug/Hello-world" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Debug/q1" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Debug/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -16,7 +16,7 @@
 				</Compiler>
 			</Target>
 			<Target title="Release">
-				<Option output="bin/Release/Hello-world" prefix_auto="1" extension_auto="1" />
+				<Option output="bin/Release/q1" prefix_auto="1" extension_auto="1" />
 				<Option object_output="obj/Release/" />
 				<Option type="1" />
 				<Option compiler="gcc" />
@@ -33,10 +33,10 @@
 			<Add option="-fexceptions" />
 		</Compiler>
 		<Unit filename="main.cpp" />
-		<Unit filename="program-2-q2.c">
-			<Option compilerVar="CC" />
-		</Unit>
 		<Extensions>
+			<code_completion />
+			<envvars />
+			<debugger />
 			<lib_finder disable_auto="1" />
 		</Extensions>
 	</Project>
